--- a/.gitmodules
+++ b/.gitmodules
@@ -31,17 +31,17 @@
 [submodule "vendor/Symfony/Component/ClassLoader"]
 	path = vendor/Symfony/src/Symfony/Component/ClassLoader
 	url = https://github.com/symfony/ClassLoader
-[submodule "vendor/Doctrine"]
-	path = vendor/Doctrine
-	url = https://github.com/doctrine/common
+[submodule "vendor/Doctrine.Common"]
+	path = vendor/Doctrine.Common
+	url = https://github.com/doctrine/common.git
 [submodule "vendor/Monolog"]
 	path = vendor/Monolog
 	url = https://github.com/Seldaek/monolog.git
 [submodule "vendor/BEAR.Resource"]
 	path = vendor/BEAR.Resource
 	url = git://github.com/koriym/BEAR.Resource.git
-[submodule "vendor/Doctrine-DBAL"]
-	path = vendor/Doctrine-DBAL
+[submodule "vendor/Doctrine.DBAL"]
+	path = vendor/Doctrine.DBAL
 	url = https://github.com/doctrine/dbal
 [submodule "vendor/Symfony/src/Symfony/Component/EventDispatcher"]
 	path = vendor/Symfony/src/Symfony/Component/EventDispatcher
@@ -55,3 +55,6 @@
 [submodule "vendor/Aura.Signal"]
 	path = vendor/Aura.Signal
 	url = https://github.com/auraphp/Aura.Signal.git
+[submodule "vendor/Doctrine.Dbal"]
+	path = vendor/Doctrine.Dbal
+	url = git://github.com/doctrine/dbal.git
