--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,7 +21,7 @@
   </logging>
 
   <filter>
-    <whitelist addUncoveredFilesFromWhitelist="true">
+    <whitelist addUncoveredFilesFromWhitelist="false">
       <directory suffix=".php">apps/*/Page</directory>
       <directory suffix=".php">apps/*/Module</directory>
       <directory suffix=".php">apps/*/ResourceObject</directory>
