Symfony console color exception.

--- a/composer.json
+++ b/composer.json
@@ -86,6 +86,8 @@
         "BEAR/Resource": "dev-master",
         "doctrine/common": "2.2.*",
         "guzzle/guzzle": "dev-master",
+		"symfony/console": "2.0.*",
+        "symfony/process": "2.0.*",
         "ray/aop": "dev-master",
         "ray/di": "dev-master"
     },
