--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/BEAR/Resource"]
 	path = vendor/BEAR/Resource
-	url = git@github.com:koriym/BEAR.Resource.git
+	url = https://github.com/koriym/BEAR.Resource
 [submodule "vendor/Ray/Di"]
 	path = vendor/Ray/Di
 	url = git@github.com:koriym/Ray.Di.git
