--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "type": "package",
             "package": {
                 "name": "smarty/smarty",
-                "version": "3.1.7",
+                "version": "3.1.8",
                 "dist": {
                     "url": "http://www.smarty.net/files/Smarty-3.1.8.zip",
                     "type": "zip"
@@ -83,13 +83,18 @@
         "Aura/Di": "dev-master",
         "Aura/Router": "dev-master",
         "Aura/Signal": "dev-master",
+        "Aura/Web": "dev-master",
         "BEAR/Resource": "dev-master",
         "doctrine/common": "2.2.*",
+        "doctrine/dbal": "dev-master",
         "guzzle/guzzle": "dev-master",
 		"symfony/console": "2.0.*",
         "symfony/http-foundation": "2.0.*",
         "Ray/Aop": "dev-master",
-        "Ray/Di": "dev-master"
+        "Ray/Di": "dev-master",
+        "smarty/smarty": "3.1.*",
+        "monolog/monolog": ">=1.0.0",
+        "zend/cache": "*"
     },
     "authors": [
         {
@@ -98,11 +103,7 @@
         }
     ],
     "suggest": {
-        "Aura/Web": "dev-master",
-        "zend/cache": "*",
         "zend/log": "*",
-        "doctrine/dbal": "dev-master",
-        "smarty/smarty": "3.1.*",
         "crodas/haanga": ">=1.0.4",
         "twig/twig": "dev-master"
     },
