--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_script:
  - 'wget http://pecl.php.net/get/APC-3.1.9.tgz ; tar -xzf APC-3.1.9.tgz ; sh -c "cd APC-3.1.9 && phpize && ./configure  && make && sudo make install" ; echo "extension=apc.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`'
  - pyrus install pear.phpunit.de/PHP_Invoker
  - wget http://getcomposer.org/composer.phar
- - php composer.phar install --install-suggests
+ - php composer.phar install
 script: phpunit --coverage-text
