Fix tests, minor refactor.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,7 @@
   <testsuites>
     <testsuite name="BEAR.Sunday">
       <directory suffix="Test.php">tests</directory>
+      <directory suffix="Test.php">apps/sandbox/tests</directory>
     </testsuite>
   </testsuites>
 
