Update guzzle 2.5, guzzle cache adapter, zend-cache.
Compatible composer 1.0.0-alpha3

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "BEAR/Resource",
+    "name": "BEAR.Sunday",
     "description": "BEAR.Sunday, a resource oriented framework",
     "keywords": ["rest", "framework", "api"],
     "homepage": "https://github.com/koriym/BEAR.Sunday",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "license": "BSD",
     "repositories": [
         {
@@ -41,36 +41,63 @@
         {
             "type": "package",
             "package": {
-                "name": "zend/log",
-                "version": "2.0.0",
-                "autoload": { "psr-0": { "Zend\\Log": "" } },
-                "target-dir": "Zend/Log",
+                "name": "zend/zend-log",
+                "version": "2.0.0beta3",
                 "dist": {
-                    "url": "https://github.com/KnpLabs/zend-log/zipball/master",
-                    "type": "zip"
+                    "url": "http://packages.zendframework.com/get/Zend_Log-2.0.0beta3.tgz",
+                    "type": "pear"
                 },
-                "source": {
-                    "url": "https://github.com/KnpLabs/zend-log.git",
-                    "type": "git",
-                    "reference": "master"
+                "autoload": {
+                    "psr-0": {
+                        "Zend\\Log": "php/"
+                    }
+                }
+            }
+        },        {
+            "type":"package",
+            "package": {
+                "name": "zend/zend-cache",
+                "version": "2.0.0beta3",
+                "dist": {
+                    "url": "http://packages.zendframework.com/get/Zend_Cache-2.0.0beta3.tgz",
+                    "type": "pear"
+                },
+                "autoload": {
+                    "psr-0": {
+                        "Zend\\Cache": "php/"
+                    }
                 }
             }
         },
         {
             "type":"package",
             "package": {
-                "name": "zend/cache",
-                "version": "2.0.0",
-                "autoload": { "psr-0": { "Zend\\Cache": "" } },
-                "target-dir": "Zend/Cache",
+                "name": "zend/zend-stdlib",
+                "version": "2.0.0beta3",
                 "dist": {
-                    "url": "https://github.com/KnpLabs/zend-cache/zipball/master",
-                    "type": "zip"
+                    "url": "http://packages.zendframework.com/get/Zend_Stdlib-2.0.0beta3.tgz",
+                    "type": "pear"
                 },
-                "source": {
-                    "url": "https://github.com/KnpLabs/zend-cache.git",
-                    "type": "git",
-                    "reference": "master"
+                "autoload": {
+                    "psr-0": {
+                        "Zend\\Stdlib": "php/"
+                    }
+                }
+            }
+        },
+        {
+            "type":"package",
+            "package": {
+                "name": "zend/zend-eventmanager",
+                "version": "2.0.0beta3",
+                "dist": {
+                    "url": "http://packages.zendframework.com/get/Zend_EventManager-2.0.0beta3.tgz",
+                    "type": "pear"
+                },
+                "autoload": {
+                    "psr-0": {
+                        "Zend\\EventManager": "php/"
+                    }
                 }
             }
         },
@@ -109,8 +136,12 @@
         "Ray/Aop": "dev-master",
         "Ray/Di": "dev-master",
         "smarty/smarty": "3.1.*",
+        "guzzle/guzzle": "2.5.*",
         "monolog/monolog": ">=1.0.0",
-        "zend/cache": "*"
+        "zend/zend-cache": "2.0.0beta3",
+        "zend/zend-stdlib": "2.0.0beta3",
+        "zend/zend-eventmanager": "2.0.0beta3",
+        "zend/zend-log": "2.0.0beta3"
     },
     "authors": [
         {
@@ -118,9 +149,8 @@
             "email": "akihito.koriyama@gmail.com"
         }
     ],
-    "suggest": {
-        "zend/log": "*",
-        "crodas/haanga": ">=1.0.4",
+    "require-dev": {
+        "crodas/haanga": "dev-master",
         "twig/twig": "dev-master"
     },
     "autoload": {
