--- a/composer.json
+++ b/composer.json
@@ -109,7 +109,7 @@
                 "target-dir": "xhprof",
                 "dist": {
                     "url": "http://pecl.php.net/get/xhprof-0.9.2.tgz",
-                    "type": "pecl"
+                    "type": "pear"
                 }
             }
         },
@@ -127,6 +127,18 @@
                     "url": "https://github.com/koriym/vdump.git",
                     "type": "git",
                     "reference": "master"
+                }
+            }
+        },
+        {
+            "type":"package",
+            "package": {
+                "name": "xhprof/xhprof",
+                "version": "0.9.2",
+                "target-dir": "xhprof",
+                "dist": {
+                    "url": "http://pecl.php.net/get/xhprof-0.9.2.tgz",
+                    "type": "pear"
                 }
             }
         }
@@ -155,7 +167,8 @@
         "zend/zend-eventmanager": "2.0.0beta3",
         "zend/zend-log": "2.0.0beta3",
         "pagerfanta/pagerfanta": "dev-master",
-        "vdump/vdump": "0.1.*"
+        "vdump/vdump": "0.1.*",
+        "xhprof/xhprof": "0.9.2"
     },
     "authors": [
         {
