--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "BEAR.Sunday",
+    "name": "bearsunday/bearsunday",
     "type": "library",
     "description": "BEAR.Sunday, a resource oriented framework",
-    "version": "0.3.2",
+    "version": "0.3.3-dev",
     "keywords": ["rest", "framework", "api"],
     "homepage": "https://github.com/koriym/BEAR.Sunday",
     "license": "BSD-3-Clause",
@@ -17,12 +17,12 @@
         "php": ">=5.4.0",
         "ext-apc": "*",
         "ext-curl": "*",
-        "Aura/Autoload": "dev-master",
-        "Aura/Di": "dev-master",
-        "Aura/Router": "dev-master",
-        "Aura/Signal": "dev-master",
-        "Aura/Web": "dev-master",
-        "BEAR/Resource": "dev-master",
+        "aura/autoload": "dev-master",
+        "aura/di": "dev-master",
+        "aura/router": "dev-master",
+        "aura/signal": "dev-master",
+        "aura/web": "dev-master",
+        "bear/resource": "dev-master",
         "doctrine/common": "2.3.*-dev",
         "doctrine/dbal": "2.3.*-dev",
         "facebook/xhprof": "0.9.*",
@@ -32,14 +32,20 @@
         "smarty/smarty": "3.1.*",
         "symfony/console": "2.0.*",
         "symfony/http-foundation": "2.0.*",
-        "Ray/Aop": "dev-master",
-        "Ray/Di": "dev-master",
+        "ray/aop": "dev-master",
+        "ray/di": "dev-master",
         "vdump/vdump": "*",
-        "print_o/print_o": "*",
+        "printo/printo": "*",
         "firephp/firephp-core": "dev-master"
     },
+    "autoload": {
+        "psr-0": {
+            "BEAR\\Framework": "src/"
+        }
+    },
+    "minimum-stability": "dev",
     "require-dev": {
-        "crodas/haanga": "dev-master",
+        "crodas/Haanga": "dev-master",
         "twig/twig": "dev-master",
         "zend/zend-log1": "1.11",
         "zend/zend-cache1": "1.11",
@@ -48,18 +54,7 @@
         "zendframework/zend-servicemanager": "2.0.*-dev",
         "zendframework/zend-cache": "2.0.*-dev",
         "zendframework/zend-log": "2.0.*-dev",
-        "zendframework/zend-stdlib": "2.0.*-dev"
-    },
-    "autoload": {
-        "psr-0": {
-            "BEAR\\Sunday": "src/",
-            "Aura\\Di": "vendor/Aura/Di/src/",
-            "Aura\\Router": "vendor/Aura/Router/src/",
-            "Aura\\Signal": "vendor/Aura/Signal/src/",
-            "Aura\\Web": "vendor/Aura/Web/src/"
-        }
-    },
-    "require-dev": {
+        "zendframework/zend-stdlib": "2.0.*-dev",
         "crodas/haanga": "dev-master",
         "twig/twig": "dev-master"
     },
@@ -98,42 +93,9 @@
             }
         },
         {
-            "type":"package",
-            "package": {
-                "name": "print_o/print_o",
-                "version": "0.1.0",
-                "target-dir": "print_o",
-                "dist": {
-                    "url": "https://github.com/koriym/print_o/zipball/master",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/koriym/print_o.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        },
-        {
             "type": "package",
             "package": {
                 "name": "facebook/xhprof",
-                "version": "0.9.2",
-                "dist": {
-                    "url": "https://github.com/facebook/xhprof/zipball/master",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/facebook/xhprof.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "xhprof/xhprof",
                 "version": "0.9.2",
                 "dist": {
                     "url": "https://github.com/facebook/xhprof/zipball/master",
